# simple_blog

./: .gitignore  pyproject.toml
simple_blog/blog/: admin.py  forms.py  models.py  views.py
simple_blog/blog/migrations/: 0001_initial.py
simple_blog/blog/templates/: base.html
simple_blog/blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
simple_blog/simple_blog/: settings.py  urls.py
simple_blog/users/: models.py  urls.py  views.py
simple_blog/users/migrations/: 0001_initial.py
simple_blog/users/templates/users/: profile.html  profile_edit.html  profile_not_found.html
