[tool.poetry]
name = "simple-blog"
version = "0.1.0"
description = ""
authors = ["hiki7 <rsaliyev03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
python-environ = "^0.4.54"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
